<resources>
    <string name="app_name">ShappApp</string>
    <string name="app_logo">full logo</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="new_acct_btn">Create new account</string>
    <string name="skip_sign_in_btn">Skip Sign In</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="address_hint">Street Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zipcode_hint">Zip Code</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="new_acct_header">Create New Account</string>
    <string name="autocomplete_key">AIzaSyDrTxxoabmSo36G7H2Ri9VOBgO-G5fV3Ak</string>
    <string name="enter_paymnt_info">Enter Payment Info</string>
    <string name="name_on_card_hint">Name on Card</string>
    <string name="car_number_hint">Card Number</string>
    <string name="card_exp_hint">Expiration Date</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="terms_condition">By tapping \"Create Account\" you agree to the</string>
    <string name="terms_link"><![CDATA[terms & conditions.]]></string>
    <string name="valid">Form is valid</string>
    <string name="invalid">Form is invalid</string>
    <string name="same_billing_address">Check if billing address is same as shipping adrress.</string>
    <string name="billing_address_txt">Billing Address</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_acct_info">Account Info</string>
    <string name="drawer_categories">Categories</string>
    <string name="drawer_aboutus">About Us</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_logout">Log Out</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
