<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context="com.qnally.shappapp.RegistrationPayment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:paddingTop="@dimen/close_btn_padding"
        app:layout_constraintBottom_toTopOf="@+id/card_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navigationIcon="@drawable/arrow">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/circlelogo"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/circle_group"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginBottom="636dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/enter_paymnt_info"
        android:textAlignment="center"
        android:textColor="@color/shapp_blue_text"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/card_name_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="580dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/name_on_card_hint"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_2"
        />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_2"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="530dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/first_name"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="@dimen/end_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/billing_chkbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="520dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:fontFamily="@font/varela_round"
        android:text="@string/same_billing_address"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_name_form"/>

    <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
        android:id="@+id/billing_address_autocomplete"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="237dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/first_name"
        android:fontFamily="@font/varela_round"
        android:hint="@string/billing_address_txt"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billing_chkbx"
        app:layout_constraintVertical_bias="0.046"
        app:pacv_googleMapsApiKey="@string/autocomplete_key"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="445dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/first_name"
        android:fontFamily="@font/varela_round"
        android:hint="@string/city_hint"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billing_address_autocomplete"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="385dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/first_name"
        android:fontFamily="@font/varela_round"
        android:hint="@string/state_hint"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"/>

    <TextView
        android:id="@+id/zip"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="330dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/first_name"
        android:fontFamily="@font/varela_round"
        android:hint="@string/zipcode_hint"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state"/>

    <TextView
        android:id="@+id/terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="900dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/terms_condition"
        android:textAlignment="center"
        android:textColor="@color/gray_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/create_acct_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"/>

    <Button
        android:id="@+id/terms_btn"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/primary_bg"
        android:fontFamily="@font/varela_round"
        android:text="@string/terms_link"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms_condition"/>

    <Button
        android:id="@+id/create_acct_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="87dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="577dp"
        android:background="@drawable/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"/>

</android.support.constraint.ConstraintLayout>
