<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context="com.qnally.shappapp.RegistrationPersonalInfo">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/close_btn_padding"
        app:navigationIcon="@drawable/close">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/circlelogo"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/circle_group"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginBottom="636dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/new_acct_header"
        android:textAlignment="center"
        android:textColor="@color/shapp_blue_text"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/first_name_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/lrg_form_txt_height"
        android:layout_marginBottom="620dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/formbx"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/first_name_hint"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/last_name_form"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/last_name_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/lrg_form_txt_height"
        android:layout_marginBottom="610dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/formbx"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/last_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:nextFocusDown="@id/billing_address_autocomplete"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_form"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/lrg_form_txt_height"
        android:layout_marginBottom="470dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/formbx"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/password_form"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_form"/>

    <EditText
        android:id="@+id/password_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/lrg_form_txt_height"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/formbx"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="Password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <EditText
        android:id="@+id/password_verify_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/lrg_form_txt_height"
        android:layout_marginBottom="200dp"
        android:background="@drawable/formbx"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="Re-enter Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/password_form"/>

    <TextView
        android:id="@+id/terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/terms_condition"
        android:textAlignment="center"
        android:textColor="@color/gray_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_verify_form"/>

    <Button
        android:id="@+id/terms_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/primary_bg"
        android:fontFamily="@font/varela_round"
        android:text="@string/terms_link"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms_condition"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:background="@drawable/sign_in_button"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>
